--- a/TwoActivitiesTwo/app/src/main/AndroidManifest.xml
+++ b/TwoActivitiesTwo/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sb52studio.twoactivities">
+    package="com.sb52studio.twoactivitiestwo">
 
     <application
         android:allowBackup="true"
@@ -9,15 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SecondActivity"
+        <activity android:name="com.sb52studio.twoactivitiestwo.SecondActivity"
             android:label="@string/activity2_name"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName="com.sb52studio.twoactivitiestwo.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.sb52studio.twoactivities.MainActivity"
+                android:value="com.sb52studio.twoactivitiestwo.MainActivity"
                 />
         </activity>
-        <activity android:name=".MainActivity">
+        <activity android:name="com.sb52studio.twoactivitiestwo.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
